# cursor-cv-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  cursor-interact  cursor_helper.py  cursor_plugin.py  cv_and_screenshots.py  demo_improved_mouse.py  file_operations.py  fill_test_form.py  get_screenshot.py  get_screenshot_with_analysis.py  improved_mouse_control.py  keyboard_control.py  main.py  mcp_automation_example.py  mcp_test_click.py  microphone.py  mouse_control.py  os_info.py  pino-instructions.md  play_speech.py  plugin.json  pyproject.toml  requirements.txt  say.py  screenshot  screenshot_20250526_150744_analysis.json  screenshot_20250526_150759_analysis.json  screenshot_20250526_151031_analysis.json  screenshot_20250526_151221_analysis.json  screenshot_20250526_151230_analysis.json  screenshot_20250526_151249_analysis.json  screenshot_20250526_151307_analysis.json  screenshot_20250526_151320_analysis.json  screenshot_20250526_151338_analysis.json  screenshot_20250526_151631_analysis.json  screenshot_20250526_151653_analysis.json  screenshot_20250526_151708_analysis.json  (+11 more)
examples/: direct_element_detection.py  test_direct.py  test_element_detection.py  test_mcp_element.py  test_page.html  test_webpage_elements.py  use_context7_interface.py  use_natural_language_commands.py  use_screenshot_in_function.py
mcp_cv_tool/: __init__.py  automation.py  config.py  context7_integration.py  cursor_integration.py  screenshot.py  server.py  swedish_typing.py
mcp_cv_tool/core/: screen_capture.py
old_structure/: CURSOR_INSTALLATION.md  README.md  cursor_python_wrapper.py  direct_test.py  fill_test_form.py  install.py  install_in_cursor.py  mcp_cv_tool.json  pyproject.toml  setup.py  start_cv_server.py  test_input_detection.py  test_routes.py
old_structure/cursor_cv_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
old_structure/mcp_cv_tool/: __init__.py  server.py  startup.py
old_structure/mcp_cv_tool/core/: __init__.py  screen_capture.py
old_structure/stremlit_interface/pages/: Test_Endpoints.py
old_structure/tests/: test_server.py
stremlit_interface/: st_main.py
stremlit_interface/pages/: Element_Finder_Debug.py  Test_Endpoints.py
tests/: test_screen_capture.py  test_server.py
