[project]
name = "cursor-cv-mcp"
version = "0.1.0"
description = "Computer Vision MCP Server for Cursor IDE with cross-platform screen capture capabilities"
authors = [
    {name = "Otto Rongedal", email = "otto@rongedal.se"},
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "mss>=9.0.1",  # Cross-platform screen capture
    "numpy>=1.24.0",
    "opencv-python>=4.9.0.80",
    "pydantic>=2.6.0",  # Data validation
    "python-multipart>=0.0.9",
    "sse-starlette>=1.8.0",
    "tenacity>=8.2.0",  # Retry mechanisms
    "structlog>=24.1.0",  # Structured logging
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=mcp_cv_tool --cov-report=term-missing -v"

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]

[tool.hatch.build.targets.wheel]
packages = ["mcp_cv_tool"] 